argocd/applications/staging-workload/dareyscore/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dareyscore-worker
  namespace: dareyscore
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: dareyscore-worker
  template:
    metadata:
      labels:
        app: dareyscore-worker
    spec:
      nodeSelector:
        capacity-type: SPOT
      tolerations:
        - key: "spot"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      serviceAccountName: dareyscore-sa
      containers:
        - name: worker
          image: 586794457112.dkr.ecr.eu-west-2.amazonaws.com/dareyscore/dareyscore-worker:5d354e492af3bd5d3d6008272782ff00097b6ef0
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
